--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
+    "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
